<resources>
    <string name="app_name">Teacher online</string>

    <string name="main_label">Teacher\nonline</string>
    <string name="welcome_text">Welcome</string>
    <string name="read_sci_fi">Read\nscientific\narticles</string>
    <string name="read_sci_fi_for_top">Read\nscientific articles</string>
    <string name="tests_label">Tests</string>
    <string name="search_rep">Find a\ntutor</string>
    <string name="main_text">Main</string>
    <string name="search_text">Search</string>
    <string name="profile_text">Profile</string>

    <string name="recomendations_text">Recommendations</string>

    <string name="prepod_text">Teacher</string>
    <string name="aboutme">About me</string>
    <string name="name_text">First Name*</string>
    <string name="surname_text">Last name*</string>
    <string name="age_text">Age</string>

    <string name="stash_years">Work experience (years)*</string>
    <string name="profile_desk">Profile Description...</string>
    <string name="auth_withvkid">Log in with VK ID</string>

    <string name="rating">Rating</string>
    <string name="scifi_article">Scientific article</string>
    <string name="read">View</string>
    <string name="author_label">Author</string>
    <string name="input_category">Enter a category:</string>
    <string name="add_resource">Add resource</string>
    <string name="input_text">Input</string>
    <string name="save_label">Save</string>
    <string name="watch_label">watch</string>

    <string name="add_video">Add video</string>
    <string name="title_text">Title*</string>
    <string name="send_to_moderate">submit</string>
    <string name="link_text">Link*</string>
    <string name="video_send_to_mod">Video submitted for moderation</string>

    <string name="check_data">Check the data in the fields!</string>

</resources>