<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back_dark"
    tools:context=".add_resource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/type_of_res"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/paluispdemobold"
                        android:text="Выберите тип ресурса"
                        android:textColor="@color/white"
                        android:textSize="14dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.cardview.widget.CardView
                        android:id="@+id/avaMain"
                        android:layout_width="1dp"
                        android:layout_height="1dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="60dp"
                        app:cardCornerRadius="30dp"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="140dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/half_gray"
                        app:cardCornerRadius="25dp"
                        android:translationZ="2dp"
                        app:layout_constraintEnd_toEndOf="@+id/avaMain"
                        app:layout_constraintStart_toStartOf="@+id/avaMain"
                        app:layout_constraintTop_toBottomOf="@+id/avaMain">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/main"
                            android:layout_margin="4dp"
                            app:cardCornerRadius="25dp"
                            android:translationZ="2dp"
                            app:layout_constraintEnd_toEndOf="@+id/imageView5"
                            app:layout_constraintStart_toStartOf="@+id/imageView5"
                            app:layout_constraintTop_toBottomOf="@+id/imageView5">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/paluispdemobold"
                                android:gravity="center"
                                android:text="@string/scifi_article"
                                android:textColor="@color/white"
                                android:textSize="11dp"/>

                        </androidx.cardview.widget.CardView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView3"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-20dp"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/half_gray"
                        android:outlineAmbientShadowColor="@android:color/transparent"
                        android:outlineSpotShadowColor="@android:color/transparent"
                        app:cardCornerRadius="25dp"
                        app:layout_constraintEnd_toEndOf="@+id/avaMain"
                        app:layout_constraintStart_toStartOf="@+id/avaMain"
                        app:layout_constraintTop_toBottomOf="@+id/cardView">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <include
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                layout="@layout/article_card"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView5"
                        android:layout_width="210dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/half_gray"
                        android:translationZ="2dp"
                        app:cardCornerRadius="25dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintEnd_toEndOf="@+id/avaMain"
                        app:layout_constraintStart_toStartOf="@+id/avaMain"
                        app:layout_constraintTop_toBottomOf="@+id/cardView3">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp"
                            android:backgroundTint="@color/main"
                            android:translationZ="2dp"
                            app:cardCornerRadius="25dp"
                            app:layout_constraintEnd_toEndOf="@+id/imageView5"
                            app:layout_constraintStart_toStartOf="@+id/imageView5"
                            app:layout_constraintTop_toBottomOf="@+id/imageView5">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/paluispdemobold"
                                android:gravity="center"
                                android:text="@string/prepod_text"
                                android:textColor="@color/white"
                                android:textSize="11dp" />

                        </androidx.cardview.widget.CardView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView6"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="600dp"
                        android:backgroundTint="@color/half_gray"
                        android:outlineAmbientShadowColor="@android:color/transparent"
                        android:outlineSpotShadowColor="@android:color/transparent"
                        app:cardCornerRadius="25dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/avaMain"
                        app:layout_constraintStart_toStartOf="@+id/avaMain"
                        app:layout_constraintTop_toBottomOf="@+id/cardView5">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <EditText
                                android:id="@+id/exp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginEnd="40dp"
                                android:layout_marginBottom="-5dp"
                                android:backgroundTint="@android:color/transparent"
                                android:fontFamily="@font/gothampro_bold"
                                android:gravity="end"
                                android:hint="@string/input_text"
                                android:inputType="number"
                                android:text=""
                                android:textColor="@color/white"
                                android:textColorHint="@color/gray1"
                                android:textSize="15dp"
                                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout8"
                                app:layout_constraintEnd_toEndOf="@+id/constraintLayout8"
                                app:layout_constraintStart_toStartOf="@+id/textView10" />

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/gothampro"
                                android:text="@string/stash_years"
                                android:textColor="@color/white"
                                android:textSize="13dp"
                                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout8"
                                app:layout_constraintStart_toStartOf="@+id/constraintLayout8" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/constraintLayout8"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="60dp"
                                android:layout_marginEnd="40dp"
                                android:background="@color/white"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <EditText
                                android:id="@+id/subject"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginEnd="40dp"
                                android:backgroundTint="@android:color/transparent"
                                android:fontFamily="@font/gothampro_bold"
                                android:hint="@string/input_category"
                                android:maxLines="3"
                                android:textColor="@color/white"
                                android:textColorHint="@color/half_gray2"
                                android:textSize="15dp"
                                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout9"
                                app:layout_constraintEnd_toEndOf="@+id/constraintLayout9"
                                app:layout_constraintStart_toStartOf="@+id/constraintLayout9" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/gothampro"
                                android:textColor="@color/white"
                                android:textSize="13dp"
                                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout9"
                                app:layout_constraintStart_toStartOf="@+id/constraintLayout9" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/constraintLayout9"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="120dp"
                                android:layout_marginEnd="40dp"
                                android:background="@color/white"
                                app:layout_constraintTop_toTopOf="parent" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="140dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="20dp"
                                android:backgroundTint="@color/half_gray"
                                android:outlineAmbientShadowColor="@android:color/transparent"
                                android:outlineSpotShadowColor="@android:color/transparent"
                                app:cardCornerRadius="15dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/constraintLayout9">

                                <EditText
                                    android:id="@+id/about"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="10dp"
                                    android:backgroundTint="@android:color/transparent"
                                    android:hint="@string/profile_desk"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/half_gray2"
                                    android:textSize="16dp" />

                            </androidx.cardview.widget.CardView>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/card_back"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView6"
                        app:cardCornerRadius="15dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/save"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="@drawable/card_back">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/paluispdemobold"
                                android:gravity="center"
                                android:text="@string/save_label"
                                android:textColor="@color/white"
                                android:textSize="12dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>